more eye tracking

--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-     
-        </style>
     <base href="/" />
     <title>Blink</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
@@ -23,18 +20,17 @@
     <script src="/clmtrackr.js"></script>
     <script src="/auto-complete.js"></script>
     <script src="/clmtrackr.js"></script>
-    <script src="/models/model_pca_20_svm.js"></script>
+    <!-- <script src="/models/model_pca_20_svm.js"></script> -->
+    <script src="/models/model_pca_20_mosse.js"></script>
     <script src="/main.js"></script>
 </head>
 <body ng-app="Blink">
 <!-- <video autoplay="true" id="videoElement" width="400" height="300">
- 
+
 </video> -->
 
 <navbar></navbar>
 <div id="main" ui-view></div>
-
-
 
 </body>
 </html>
